# circurly

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
src/: main.cpp
src/core/: app.cpp  app.hpp
src/pages/: home_page.cpp  home_page.hpp  page.cpp  page.hpp  start_page.cpp  start_page.hpp  workspace_page.cpp  workspace_page.hpp
src/render/: context.cpp  context.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
